[package]
name = "cluLockFile"
version = "0.1.7"
authors = ["Денис Котляров <#Ulin Project 18, denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluExtIO.git"
license = " Apache-2.0"
readme = "README.md"

[dependencies]
cluFlock = { git = "https://github.com/clucompany/cluFlock" }