[package]
name = "cluLockFile"
version = "0.1.9"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluExtIO.git"
license = " Apache-2.0"
readme = "README.md"
edition = "2018"


[dependencies]
cluFlock = { path = "/d/cluOS/new/RELEASE/cluFlock/" }
