[package]
name = "cluSyncFile"
version = "0.2.2"
authors = ["Denis Kotlyarov (Денис Котляров) <denis2005991@gmail.com>"]
repository = "https://github.com/clucompany/cluSyncFile.git"
license = " Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
cluFlock = "1.2.5"
cluFullTransmute = "1.0.2"
